endpoints work, need to finish id, login and register design done!